# ComputabilityComplexity

./: FinalReport.tex  README.md
final-project/: .benv  .env  .tenv  CHANGELOG.md  Final Draft Thesis.tex  LICENSE  benchmark_results_20241105_052159.txt  benchmark_results_20241105_053109.txt  benchmark_results_20241105_053125.txt  benchmark_results_20241105_060050.txt  benchmark_results_20241105_060249.txt  benchmark_results_20241105_061425.txt  benchmark_results_20241105_061538.txt  benchmark_results_20241105_062103.txt  benchmark_results_20241105_063921.txt  benchmark_results_20241105_064453.txt  benchmark_results_20241105_065339.txt  dpll-benchmark.csv  dpll-benchmark.html  final-project.cabal  t  temp
final-project/bench/: Benchmark.hs  KnapsackBenchmarks.hs  SatBenchmarks.hs  TspBenchmarks.hs
final-project/benchmark_results/: benchmark_results_20241108_183709.txt  benchmark_results_20241108_212132.txt  benchmark_results_20241108_212339.txt  benchmark_results_20241108_212615.txt  benchmark_results_20241108_212713.txt  benchmark_results_20241108_220436.txt  benchmark_results_20241109_020954.txt  benchmark_results_20241109_070554.txt  benchmark_results_20241109_164131.txt  benchmark_results_20241109_171340.txt  benchmark_results_20241109_190132.txt  benchmark_results_20241109_190211.txt  benchmark_results_20241109_190244.txt  benchmark_results_20241109_190324.txt  benchmark_results_20241109_194830.txt  benchmark_results_20241109_200108.txt  benchmark_results_20241214_005800.txt  benchmark_results_20241214_005859.txt  benchmark_results_20241214_011124.txt  benchmark_results_20241214_011221.txt  knapsack_benchmark_results.txt
final-project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
final-project/dist-newstyle/packagedb/ghc-9.2.8/: final-project-0.1.0.0-inplace.conf  package.cache
final-project/src/: DisjointSet.hs  DistanceFunctions.hs  GraphTypes.hs  Knapsack.hs  Kruskal.hs  SatLinearProgramming.hs  SatSolvers.hs  SatTypes.hs  TspLibParser.hs  TspSolvers.hs  TspTypes.hs
final-project/test/: FuzzKnapsack.hs  LinearProgrammingSatTest.hs  Main.hs  TestDisjointSet.hs  TestGraphConversion.hs  TestKnapsack.hs  TestKruskal.hs  TestSatSolverHelpers.hs  TestSatSolvers.hs  TestSatTypes.hs  TestTspParser.hs  TestTspSolver.hs  TspParserTest.hs
