cabal-version:     3.0
name:               final-project
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Zander Chown
maintainer:         91749140+zchown@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall 
                 -Wcompat 
                 -Widentities 
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns 
                 -Wmissing-home-modules 
                 -Wpartial-fields 
                 -Wredundant-constraints
                 -Wno-orphans 
                 -O2 
                 -threaded

library
    import:           warnings
    exposed-modules:  MyLib
                     Knapsack
                     SatTypes
                     SatSolvers
                     TspTypes
                     TspLibParser
    other-extensions: FlexibleInstances
                     FlexibleContexts
                     DataKinds
                     KindSignatures
                     GeneralizedNewtypeDeriving
                     ScopedTypeVariables
                     TypeApplications
    build-depends:    base ^>=4.16.4.0
                   , bitarray ^>=0.0.1.0
                   , vector
                   , array
                   , split
                   , containers
                   , zlib
                   , bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite final-project-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    FuzzKnapsack
                     TestKnapsack
                     TestSatTypes
                     TestSatSolverHelpers
                     TestSatSolvers
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                    , hspec ^>=2.10.0
                    , QuickCheck ^>=2.14.2
                    , final-project
                    , vector
    buildable:        True

benchmark sat-solver-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Benchmark.hs
    hs-source-dirs:   bench
    build-depends:    base ^>=4.16.4.0
                    , criterion ^>=1.6.0.0
                    , deepseq ^>=1.4.6.1
                    , random ^>=1.2.0
                    , final-project
                    , vector
                    , time
                    , parallel
    default-language: Haskell2010
    ghc-options:      -O2
                     -threaded
                     -rtsopts
                     -with-rtsopts=-N
                     -with-rtsopts=-M4G
    buildable:        True
